Finished edit/put route for photos, edit ejs for photos

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,5 +10,7 @@
     Welcome to Pix!</br>
     </br>
     Check out our <a href='/users'>users</a>
+    </br>
+    Check out our <a href='/photos'>photos</a>
 </body>
 </html>
