added session tracking for user id

--- a/views/photos/show.ejs
+++ b/views/photos/show.ejs
@@ -15,6 +15,7 @@
 
     title: <%=photo.title%></br>
     <img src="<%=photo.url%>"></br>
+    <%# populate photo user name here %>
 </body>
 <section>
           <a href="/photos/<%=photo._id%>/edit">Edit</a>
