--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,5 +12,12 @@
     Check out our <a href='/users'>users</a>
     </br>
     Check out our <a href='/photos'>photos</a>
+    </br>
+    <h2>Login</h2>
+      <form action="/" method="POST">
+        <input type="text" name="username" value='I dont work yet'>
+        <input type="password" name='password' value='tee hee'>
+        <button type='submit'>Login</button>
+      </form>
 </body>
 </html>
