--- a/views/photos/new.ejs
+++ b/views/photos/new.ejs
@@ -19,7 +19,7 @@
       <form action="/photos" method="POST">
         Photo title: <input type="text" name="title" /></br>
         Photo url: <input type="text" name="url"/></br>
-        <%# Photo user: <input type="text" name="user"/></br> %>
+        Photo user: <input type="text" name="user"/></br>
         <input type="submit" value="create photo"/>
       </form>
     </main>
