--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,4 +1,4 @@
-<form action="login" method="POST">
+<form action="/users/login" method="POST">
         <input type="text" name="username" value='I dont work yet'>
         <input type="password" name='password' value='tee hee'>
         <button type='submit'>Login</button>
