--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -22,6 +22,7 @@
       <form action="/users" method="POST">
         <input type="text" name="name" />
         <input type="text" name="specialty"/>
+        <input type="password" name="password"/>
         <input type="submit" value="create user"/>
       </form>
     </main>
