--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,9 +14,9 @@
     Check out our <a href='/photos'>photos</a>
     </br>
     <h2>Login</h2>
-      <form action="/" method="POST">
-        <input type="text" name="username" value='I dont work yet'>
-        <input type="password" name='password' value='tee hee'>
+      <form action="/users/login" method="POST">
+        <input type="text" name="name">
+        <input type="password" name='password'>
         <button type='submit'>Login</button>
       </form>
 </body>
