--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,5 +1,7 @@
+Login to pix:</br>
+</br>
 <form action="/users/login" method="POST">
-        <input type="text" name="username" value='I dont work yet'>
+        <input type="text" name="name" value='I dont work yet'>
         <input type="password" name='password' value='tee hee'>
         <button type='submit'>Login</button>
       </form>
